opam-version: "2.0"

synopsis: "Mergeable replicated data types"

version: "0.0.1"
license: "MIT"
homepage: "https://github.com/anmolsahoo25/mrdt"
bug-reports: "https://github.com/anmolsahoo25/mrdt/issues"

maintainer: ["Anmol Sahoo<anmol.sahoo25@gmail.com>"]
authors: ["Anmol Sahoo"]

depends: [
  "scylla" {>= "0.0.1"}
  "dune" {>= "2.7" & > "2.0.0"}
  "irmin" {> "2.0.0"}
  "ppx_irmin" {> "2.0.0"}
  "odoc" {with-doc}
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

dev-repo: "git+https://github.com/anmolsahoo25/mrdt.git"
